libqmi-glib,proxy: fix segfault

This patch fixes a segfault caused by a race condition where an incoming
request has just been accepted and allocated, but a device for it has yet
to be opened, and an old request is closed. The checks prevent a strcmp
against unexisting devices.

https://bugs.freedesktop.org/show_bug.cgi?id=77335